--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,5 +145,7 @@
     <string name='Q_mc26'>mc26</string>
     <string name='Q_mcrem'>mcrem</string>
     <string name='Q_a06'>a06</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
